--- a/flask/app/templates/login.html
+++ b/flask/app/templates/login.html
@@ -1,31 +1,29 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='styles.css') }}"
-    />
-</head>
-<body>
-    <div class="container box-access py-4">
-        <h1 class="title">Login</h1>
-        <form method="POST">
-            <div class="form-group">
-                <label for="usuario">Usuário:</label>
-                <input type="text" class="form-control" id="usuario" name="usuario" required>
-            </div>
-            <div class="form-group">
-                <label for="senha">Senha:</label>
-                <input type="password" class="form-control" id="senha" name="senha" required>
-            </div>
-            <button type="submit" class="btn btn-custom">Entrar</button>
-        </form>
+{% extends "layout.html" %} {% block title %}Login - Broto Fácil{% endblock %}
+{% block content %}
+<div class="container box-access py-4">
+  <h1 class="title">Login</h1>
+  <form method="POST">
+    <div class="form-group">
+      <label for="usuario">Usuário:</label>
+      <input
+        type="text"
+        class="form-control"
+        id="usuario"
+        name="usuario"
+        required
+      />
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+    <div class="form-group">
+      <label for="senha">Senha:</label>
+      <input
+        type="password"
+        class="form-control"
+        id="senha"
+        name="senha"
+        required
+      />
+    </div>
+    <button type="submit" class="btn btn-custom">Entrar</button>
+  </form>
+</div>
+{% endblock %}
