--- a/flask/app/templates/login.html
+++ b/flask/app/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %} {% block title %}Login - Broto Fácil{% endblock %}
 {% block content %}
 <div class="container box-access py-4">
-  <h1 class="title">Login</h1>
+  <h1 class="title">LOGIN</h1>
   <form method="POST">
     <div class="form-group">
       <label for="usuario">Usuário:</label>
