--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -17,7 +17,7 @@ block content %}
       />
       <h1 class="title">Sistema de Monitoramento Broto Fácil</h1>
       <p class="description">Veja a temperatura e umidade de sua planta.</p>
-      <a class="btn btn-custom" href="{{ url_for('login') }}"
+      <a class="btn btn-custom" href="{{ url_for('auth.login') }}"
         >Acessar Dashboard</a
       >
     </div>
