Estrutura de views e templates

--- a/flask/app/views/index.html
+++ b/flask/app/views/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block title %}Sistema - Broto Fácil{% endblock %} {%
+{% extends "templates/layout.html" %} {% block title %}Sistema - Broto Fácil{% endblock %} {%
 block content %}
 <div class="container box-access">
   <div class="row">
