--- a/flask/app/views/dashboard.html
+++ b/flask/app/views/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block title %}Dashboard - Broto Fácil{% endblock
+{% extends "templates/layout.html" %} {% block title %}Dashboard - Broto Fácil{% endblock
 %} {% block content %}
 
 <div class="container box-access">
