--- a/flask/app/views/login.html
+++ b/flask/app/views/login.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block title %}Login - Broto Fácil{% endblock %}
+{% extends "templates/layout.html" %} {% block title %}Login - Broto Fácil{% endblock %}
 {% block content %}
 <div class="container box-access py-4">
   <h1 class="title">Login</h1>
