--- a/flask/app/views/login.html
+++ b/flask/app/views/login.html
@@ -1,29 +1,34 @@
-{% extends "templates/layout.html" %} {% block title %}Login - Broto Fácil{% endblock %}
+{% extends "templates/layout.html" %}
+{% block title %}Login - Broto Fácil{% endblock %}
+
 {% block content %}
-<div class="container box-access py-4">
-  <h1 class="title">Login</h1>
-  <form method="POST">
-    <div class="form-group">
-      <label for="usuario">Usuário:</label>
-      <input
-        type="text"
-        class="form-control"
-        id="usuario"
-        name="usuario"
-        required
-      />
-    </div>
-    <div class="form-group">
-      <label for="senha">Senha:</label>
-      <input
-        type="password"
-        class="form-control"
-        id="senha"
-        name="senha"
-        required
-      />
-    </div>
-    <button type="submit" class="btn btn-custom">Entrar</button>
-  </form>
-</div>
+<h1>Login</h1>
+
+{% if success %}
+<div class="alert alert-success">{{ success }}</div>
+{% endif %}
+
+<form method="POST" action="">
+  {{ form.hidden_tag() }}
+
+  <div class="form-group">
+    {{ form.username.label(class_="form-label") }}
+    {{ form.username(class_="form-control", size=32) }}
+    {% for error in form.username.errors %}
+    <span class="text-danger">[{{ error }}]</span>
+    {% endfor %}
+  </div>
+
+  <div class="form-group">
+    {{ form.password.label(class_="form-label") }}
+    {{ form.password(class_="form-control", size=32) }}
+    {% for error in form.password.errors %}
+    <span class="text-danger">[{{ error }}]</span>
+    {% endfor %}
+  </div>
+
+  <div class="form-group">
+    {{ form.submit(class_="btn btn-primary") }}
+  </div>
+</form>
 {% endblock %}
