--- a/flask/app/static/styles.css
+++ b/flask/app/static/styles.css
@@ -14,10 +14,13 @@ body {
     font-family: 'Quicksand', sans-serif;
     background-color: #F1F3F0;
     color: #4a4a4a;
+}
+
+.block-content {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 
