Implementação Umidade Solo

--- a/flask/app/views/dashboard.html
+++ b/flask/app/views/dashboard.html
@@ -2,7 +2,7 @@
 %} {% block content %}
 
 <div class="container box-access">
-  <h1 class="title">Login</h1>
+  <h1 class="title">Dashboard</h1>
   <div class="col">
     <div class="row">{{ combined_graph|safe }}</div>
     <div class="row cta-part d-flex justify-content-between">
