--- a/flask/app/static/dashboard.css
+++ b/flask/app/static/dashboard.css
@@ -1,12 +1,10 @@
 
-/* .chart-container {
-    margin-top: 20px;
-    width: 100%;
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-} */
 
 .dashboard {
-    min-width: 90vw;
+    width: 90vw;
+    margin: 2rem 0;
+    background-color: white;
+    border-radius: 12px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
