--- a/flask/app/static/styles.css
+++ b/flask/app/static/styles.css
@@ -1,7 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Gothic&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=League+Gothic&family=Quicksand:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=League+Gothic&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap');
-@import '/dashboard.css';
+@import 'dashboard.css';
+@import 'login.css';
+
+.mt2 {
+    margin-top: 2rem;
+}
+.mb2 {
+    margin-bottom: 2rem;
+}
 
 * {
     margin: 0;
@@ -29,7 +37,6 @@ body {
     background-color: white;
     border-radius: 12px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-    text-align: center;
 }
 
 img {
@@ -49,7 +56,8 @@ img {
     font-size: 2.5rem;
     font-weight: bold;
     color: #66A404;
-    margin-bottom: 10px;
+    padding: 1rem;
+    text-align: center;
 }
 
 .description {
