--- a/flask/app/views/dashboard.html
+++ b/flask/app/views/dashboard.html
@@ -1,21 +1,44 @@
-{% extends "templates/layout.html" %} {% block title %}Dashboard - Broto Fácil{% endblock
-%} {% block content %}
+{% extends "templates/layout.html" %}
+{% block title %}Dashboard - Broto Fácil{% endblock %}
+{% block content %}
 
-<div class="container box-access">
+<div class="dashboard">
   <h1 class="title">Dashboard</h1>
-  <div class="col">
-    <div class="row">{{ combined_graph|safe }}</div>
-    <div class="row cta-part d-flex justify-content-between">
-      <a href="{{ url_for('api.exportar_csv') }}" class="btn btn-custom"
-        >Exportar Dados para CSV</a
-      >
-      <a href="{{ url_for('dashboard.dashboard') }}" class="btn btn-custom"
-        >Visualizar Últimos 7 Dias</a
-      >
-      <a href="{{ url_for('home.index') }}">
-        <button class="btn btn-custom">Início</button>
-      </a>
+  <div class="row">
+    <!-- Gráfico de Temperatura -->
+    <div class="col-md-12">
+      <h2>Temperatura</h2>
+      <div>{{ temp_graph|safe }}</div>
+    </div>
+
+    <!-- Gráfico de Umidade -->
+    <div class="col-md-12">
+      <h2>Umidade</h2>
+      <div>{{ umid_graph|safe }}</div>
     </div>
   </div>
+
+  <div class="row">
+    <!-- Gráfico de Luminosidade -->
+    <div class="col-md-12">
+      <h2>Luminosidade</h2>
+      <div>{{ lumi_graph|safe }}</div>
+    </div>
+
+    <!-- Gráfico de Umidade do Solo -->
+    <div class="col-md-12">
+      <h2>Umidade do Solo</h2>
+      <div>{{ solo_graph|safe }}</div>
+    </div>
+  </div>
+
+  <div class="row cta-part d-flex justify-content-between mt-3 mx-3">
+    <a href="{{ url_for('api.exportar_csv') }}" class="btn btn-custom">Exportar Dados para CSV</a>
+    <a href="{{ url_for('dashboard.dashboard') }}" class="btn btn-custom">Visualizar Últimos 7 Dias</a>
+    <a href="{{ url_for('home.index') }}">
+      <button class="btn btn-custom">Início</button>
+    </a>
+  </div>
 </div>
+
 {% endblock %}
