--- a/flask/app/views/login.html
+++ b/flask/app/views/login.html
@@ -1,30 +1,29 @@
-{% extends "templates/layout.html" %}
-{% block title %}Login - Broto Fácil{% endblock %}
+{% extends "templates/layout.html" %} {% block title %}Login - Broto Fácil{%
+endblock %} {% block content %}
 
-{% block content %}
-<h1>Login</h1>
+<div class="container box-access">
+  <h1 class="title">Login</h1>
+  <form method="POST" action="">
+    {{ form.hidden_tag() }}
 
-<form method="POST" action="">
-  {{ form.hidden_tag() }}
+    <div class="form-group">
+      {{ form.username.label(class_="form-label") }} {{
+      form.username(class_="form-control", size=32) }} {% for error in
+      form.username.errors %}
+      <span class="text-danger">[{{ error }}]</span>
+      {% endfor %}
+    </div>
 
-  <div class="form-group">
-    {{ form.username.label(class_="form-label") }}
-    {{ form.username(class_="form-control", size=32) }}
-    {% for error in form.username.errors %}
-    <span class="text-danger">[{{ error }}]</span>
-    {% endfor %}
-  </div>
+    <div class="form-group">
+      {{ form.password.label(class_="form-label") }} {{
+      form.password(class_="form-control", size=32) }} {% for error in
+      form.password.errors %}
+      <span class="text-danger">[{{ error }}]</span>
+      {% endfor %}
+    </div>
 
-  <div class="form-group">
-    {{ form.password.label(class_="form-label") }}
-    {{ form.password(class_="form-control", size=32) }}
-    {% for error in form.password.errors %}
-    <span class="text-danger">[{{ error }}]</span>
-    {% endfor %}
-  </div>
+    <div class="form-group d-flex justify-content-center text-center mb2">{{ form.submit(class_="btn btn-custom") }}</div>
+  </form>
+</div>
 
-  <div class="form-group">
-    {{ form.submit(class_="btn btn-primary") }}
-  </div>
-</form>
 {% endblock %}
