--- a/flask/app/views/templates/layout.html
+++ b/flask/app/views/templates/layout.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{% block title %}Meu Aplicativo{% endblock %}</title>
-
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
 </head>
