link e css botões

--- a/flask/app/static/dashboard.css
+++ b/flask/app/static/dashboard.css
@@ -7,5 +7,15 @@
     border-radius: 12px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     text-align: center;
+    overflow: hidden;
     padding: 1rem;
+}
+
+.chart {
+    height: 100px;
+  }
+
+.chart-big {
+    text-align: center;
+    max-height: 400px;
 }
