--- a/flask/app/views/index.html
+++ b/flask/app/views/index.html
@@ -2,17 +2,17 @@
 {% block title %}Sistema - Broto Fácil{% endblock %} 
 {% block content %}
 
-<div class="container box-access">
+<div class="container box-access overflow-hidden">
   <div class="row">
-    <div class="col-md-6 d-flex align-items-center justify-content-center">
+    <div class="col-md-6 p-0 d-flex align-items-center justify-content-center">
       <img src="{{ url_for('static', filename='broto.jpg') }}" alt="Imagem background" class="img-fluid" />
     </div>
 
-    <div class="col-md-6 d-flex flex-column align-items-center justify-content-center text-center">
+    <div class="col-md-6 d-flex flex-column align-items-center justify-content-center text-center p-4">
       <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="logo mb-3" />
       <h1 class="title mt-0">Sistema de Monitoramento Broto Fácil</h1>
       <p class="description">Veja a temperatura e umidade de sua planta.</p>
-      <a class="btn btn-custom mb-2" href="{{ url_for('auth.login') }}">Acessar Dashboard</a>
+      <a class="btn btn-custom" href="{{ url_for('auth.login') }}">Acessar Dashboard</a>
     </div>
   </div>
 </div>
