--- a/flask/app/static/styles.css
+++ b/flask/app/static/styles.css
@@ -66,7 +66,7 @@ img {
 .description {
     font-size: 1.125rem;
     margin-bottom: 20px;
-    color: #666;
+    color: #5e5f66;
 }
 
 .btn-custom {
