--- a/flask/app/views/dashboard.html
+++ b/flask/app/views/dashboard.html
@@ -1,7 +1,10 @@
 {% extends "templates/layout.html" %} {% block title %}Dashboard - Broto Fácil{%
 endblock %} {% block content %}
 <div class="dashboard">
-  <h1 class="title">Dashboard</h1>
+  <a class="text-start" href="{{ url_for('home.index') }}">
+    <button class="btn btn-second"><i class="fa-solid fa-angles-left"></i> LOGOUT</button>
+  </a>
+  <h1 class="title text-center">Dashboard</h1>
 
   <!-- Gráficos Resumo -->
   <div class="row">
@@ -23,16 +26,16 @@ endblock %} {% block content %}
     </div>
   </div>
 
-  <div class="row cta-part d-flex gap-3 justify-content-center mt-3 mb-3">
-    <a href="{{ url_for('api.exportar_csv') }}" class="btn btn-custom"
+  <div class="row cta-part d-flex justify-content-center mt-3 mb-3">
+      <a href="{{ url_for('api.exportar_csv') }}" class="btn btn-custom"
       >Exportar Dados para CSV</a
-    >
-    <a href="{{ url_for('dashboard.dashboard') }}" class="btn btn-custom"
-      >Visualizar Últimos 7 Dias</a
-    >
-    <a href="{{ url_for('home.index') }}">
-      <button class="btn btn-custom">Início</button>
-    </a>
+      >
+      <a href="{{ url_for('dashboard.dashboard') }}" class="btn btn-custom"
+        >Visualizar Últimos 7 Dias</a
+      >
+      <a href="{{ url_for('dashboard.dashboard') }}">
+        <button class="btn btn-second"><i class="fa-solid fa-arrows-rotate"></i> Reload</button>
+      </a> 
   </div>
 
   <!-- Gráfico de Temperatura -->
