--- a/flask/app/views/templates/layout.html
+++ b/flask/app/views/templates/layout.html
@@ -8,12 +8,30 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
+  <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
 </head>
 
 <body>
+  <script>
+    if ("serviceWorker" in navigator) {
+        if (navigator.serviceWorker.controller) {
+            //console.log("[PWA Builder] active service worker found, no need to register");
+        } else {
+            // Register the service worker
+            navigator.serviceWorker
+                .register("pwabuilder-sw.js", {
+                    scope: "./"
+                })
+                .then(function(reg) {
+                    //console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+                });
+        }
+    }
+  </script>
   {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
   {% for category, message in messages %}
+
   <div
     class="alert alert-{{ category }} alert-dismissible fade show d-flex justify-content-between align-items-center gap-2"
     role="alert">
@@ -42,7 +60,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
-
+  
 </body>
 
 </html>
