--- a/flask/app/views/templates/layout.html
+++ b/flask/app/views/templates/layout.html
@@ -14,18 +14,18 @@
 <body>
   <script>
     if ("serviceWorker" in navigator) {
-        if (navigator.serviceWorker.controller) {
-            //console.log("[PWA Builder] active service worker found, no need to register");
-        } else {
-            // Register the service worker
-            navigator.serviceWorker
-                .register("pwabuilder-sw.js", {
-                    scope: "./"
-                })
-                .then(function(reg) {
-                    //console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
-                });
-        }
+      if (navigator.serviceWorker.controller) {
+        //console.log("[PWA Builder] active service worker found, no need to register");
+      } else {
+        // Register the service worker
+        navigator.serviceWorker
+          .register("pwabuilder-sw.js", {
+            scope: "./"
+          })
+          .then(function (reg) {
+            //console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+          });
+      }
     }
   </script>
   {% with messages = get_flashed_messages(with_categories=true) %}
@@ -46,9 +46,42 @@
   {% endif %}
   {% endwith %}
 
+  <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+    <div class="container-fluid">
+      <div style="gap: 12px;" class="d-flex gap-3 align-items-center">
+        <div class="shadow rounded-circle d-flex justify-content-center align-items-center"
+          style="height: 40px;width: 40px;">
+          <i class="fa-regular fa-user"></i>
+        </div>
+        <div class="d-flex flex-column">
+          <span class="font-12px opacity-75 text-success">
+            Broto facil
+          </span>
+          <span class="fw-semibold">
+            Usuário
+          </span>
+        </div>
+      </div>
+      <a href="/" class="btn btn-second p-2 rounded-circle position-relative" style="height: 56px;width:56px" type="button">
+        <i class="fa-solid fa-xl fa-arrows-rotate absolute-center"></i>
+      </a>
+  </nav>
+
   <div class="block-content">
     <main>{% block content %} {% endblock %}</main>
   </div>
+
+  <nav class="nav-bottom">
+    <a class="btn text-white">
+      <i class="fa-solid fa-house"></i>
+    </a>
+    <a class="btn text-white">
+      <i class="fa-solid fa-chart-pie fa-xl"></i>
+    </a>
+    <a class="btn text-white">
+      <i class="fa-solid fa-user"></i>
+    </a>
+  </nav>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -60,7 +93,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
-  
+
 </body>
 
 </html>
