--- a/flask/app/views/dashboard.html
+++ b/flask/app/views/dashboard.html
@@ -1,9 +1,26 @@
 {% extends "templates/layout.html" %} {% block title %}Dashboard - Broto Fácil{%
 endblock %} {% block content %}
-<div class="dashboard">
+<div class="container mt-4">
   <a class="text-start" href="{{ url_for('home.index') }}">
     <button class="btn btn-second"><i class="fa-solid fa-angles-left"></i> LOGOUT</button>
   </a>
+
+  <div class="row cta-part d-flex justify-content-center mt-3 mb-3">
+    <a href="{{ url_for('api.exportar_csv') }}" class="btn btn-custom">Exportar Dados para CSV</a>
+
+    <div class="dropdown">
+      <button class="btn btn-custom dropdown-toggle" type="button" id="filterButton" data-bs-toggle="dropdown" aria-expanded="false">
+        Filtrar por Período
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="filterButton">
+        <li><a class="dropdown-item" href="{{ url_for('dashboard.dashboard', filtro='1hora') }}">Última 1 hora</a></li>
+        <li><a class="dropdown-item" href="{{ url_for('dashboard.dashboard', filtro='1dia') }}">Último 1 dia</a></li>
+        <li><a class="dropdown-item" href="{{ url_for('dashboard.dashboard', filtro='7dias') }}">Últimos 7 dias</a></li>
+        <li><a class="dropdown-item" href="{{ url_for('dashboard.dashboard', filtro='1mes') }}">Último 1 mês</a></li>
+      </ul>
+    </div>
+    </div>
+
   <h1 class="title text-center">Dashboard</h1>
 
   <!-- Gráficos Resumo -->
@@ -26,55 +43,92 @@ endblock %} {% block content %}
     </div>
   </div>
 
-  <div class="row cta-part d-flex justify-content-center mt-3 mb-3">
-      <a href="{{ url_for('api.exportar_csv') }}" class="btn btn-custom"
-      >Exportar Dados para CSV</a
-      >
-      <a href="{{ url_for('dashboard.dashboard') }}" class="btn btn-custom"
-        >Visualizar Últimos 7 Dias</a
-      >
-      <a href="{{ url_for('dashboard.dashboard') }}">
-        <button class="btn btn-second"><i class="fa-solid fa-arrows-rotate"></i> Reload</button>
-      </a> 
-  </div>
-
-  <!-- Gráfico de Temperatura -->
+  <div class="accordion mt-5 border-0 shadow-sm" id="accordionExample">
+    <div class="accordion-item border-0">
+      <h2 class="accordion-header">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+          <h3>Temperatura (°C)</h3>
+        </button>
+      </h2>
+      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+         
+           <!-- Gráfico de Temperatura -->
   <div class="row mt-3">
     <div class="col">
-      <h3>Temperatura (°C)</h3>
       <canvas id="chartTemperatura" class="chart-big"></canvas>
     </div>
   </div>
-
-  <!-- Gráfico de Umidade -->
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item border-0">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          <h3>Umidade (%)</h3>
+        </button>
+      </h2>
+      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+           <!-- Gráfico de Umidade -->
   <div class="row mt-3">
     <div class="col">
-      <h3>Umidade (%)</h3>
+      
       <canvas id="chartUmidade" class="chart-big"></canvas>
     </div>
   </div>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item border-0">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          <h3>Luminosidade (%)</h3>
+        </button>
+      </h2>
+      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+         <!-- Gráfico de Luminosidade -->
+        <div class="row mt-3">
+          <div class="col">
+            
+            <canvas id="chartLuminosidade" class="chart-big"></canvas>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
 
-  <!-- Gráfico de Luminosidade -->
-  <div class="row mt-3">
-    <div class="col">
-      <h3>Luminosidade (%)</h3>
-      <canvas id="chartLuminosidade" class="chart-big"></canvas>
+    <div class="accordion-item border-0">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+          <h3>Umidade do Solo (%)</h3>
+        </button>
+      </h2>
+      <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+           <!-- Gráfico de Umidade do Solo -->
+            <div class="row mt-3">
+              <div class="col">
+                <canvas id="chartUmidadeSolo" class="chart-big"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-
-  <!-- Gráfico de Umidade do Solo -->
-  <div class="row mt-3">
-    <div class="col">
-      <h3>Umidade do Solo (%)</h3>
-      <canvas id="chartUmidadeSolo" class="chart-big"></canvas>
-    </div>
-  </div>
-</div>
 
 <!-- Estilos CSS -->
-<style>
-  
-</style>
+<script>
+  // Captura o evento de clique no dropdown e redireciona para a rota com o filtro correto
+  document.querySelectorAll('.dropdown-item').forEach(item => {
+    item.addEventListener('click', function() {
+      const filterDays = this.getAttribute('data-filter'); // Obtém o valor de filtro (1, 7 ou 30)
+      window.location.href = `/dashboard?days=${filterDays}`;
+    });
+  });
+</script>
 
 <!-- Biblioteca Chart.js -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
