--- a/flask/app/views/register.html
+++ b/flask/app/views/register.html
@@ -1,7 +1,7 @@
 {% extends "templates/layout.html" %} {% block title %}Registrar - Broto Fácil{%
 endblock %} {% block content %}
 
-<div class="container box-access p-4">
+<div class="container p-4">
   <h1 class="title">Registrar</h1>
   <form method="POST" action="">
     {{ form.hidden_tag() }}
